Fixed issue buttons not working on mobile (closes #40)

--- a/static/style.css
+++ b/static/style.css
@@ -510,6 +510,10 @@ tbody .issue-table-key {
   display: flex;
 }
 
+.issue-menu-button.open .issue-menu {
+  display: flex;
+}
+
 .issue-split {
   padding-top: 1rem;
   display: flex;
